[package]
name = "lightmap"
version = "0.1.1"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Light map generator"
keywords = ["lightmap", "uvgen"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
documentation = "https://docs.rs/lightmap"
repository = "https://github.com/mrDIMAS/lightmap"
readme = "README.md"
resolver = "2"
rust-version = "1.72"

[dependencies]
fyrox-math = "0.1.0"
nalgebra = "0.32.3"
uvgen = "0.1.0"
rayon = "1.8.1"
fxhash = "0.2.1"
arrayvec = "0.7.4"